--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="caixinha-cor" id="tchuco">
-
+    <div class="caixinha-cor" id="div">
+sas
     </div>
     <div class="action-site">
         <input oninput="mudarRed()"  type="range" name="cor-vemelho" id="red" class="red" min="0" max="255"> <input readonly type="text" id="valor-red"><br>
