--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="caixinha-cor" id="div">
-sas
+    <div class="div-dadiv-dadiv">
+    <header class="div-da-div">
+    <div id="di" class="div">
+ss
     </div>
+    </header>
     <div class="action-site">
-        <input oninput="mudarRed()"  type="range" name="cor-vemelho" id="red" class="red" min="0" max="255"> <input readonly type="text" id="valor-red"><br>
-        <input oninput="mudarBlue()" type="range" name="cor-azul" id="blue" class="blue"  min="0" max="255"> <input readonly type="text" id="valor-blue"><br>
-        <input oninput="mudarGreen()" type="range" name="cor-verde" id="green" class="green"  min="0" max="255"> <input readonly type="text" id="valor-gree">
+        <input oninput="mudar()"  type="range" name="cor-vemelho" id="red" class="red" min="0" max="255"> 
+        <input readonly type="text" id="valor-red"><br>
+        
+        <input oninput="mudar()" type="range" name="cor-azul" id="blue" class="blue"  min="0" max="255"> 
+        <input readonly type="text" id="valor-blue"><br>
+        
+        <input oninput="mudar()" type="range" name="cor-verde" id="green" class="green"  min="0" max="255">
+        <input readonly type="text" id="valor-gree">
+    </div>
     </div>
 </body>
 </html>
